@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
     </parent>
 
     <!-- ********************************************************************************** -->
-    <!-- *********************************** IIOP       *********************************** -->
+    <!-- *********************************** IIOP *********************************** -->
     <!-- ********************************************************************************** -->
     <groupId>org.wildfly</groupId>
     <artifactId>wildfly-ts-integ-iiop</artifactId>
@@ -38,11 +37,30 @@
             <properties>
             </properties>
 
-            <!--
-                Server configuration executions.
-            -->
+            <!-- Server configuration executions. -->
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.jboss.openjdk-orb</groupId>
+                                            <artifactId>openjdk-orb</artifactId>
+                                            <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
@@ -50,14 +68,19 @@
                             <execution>
                                 <id>build-clustering.server</id>
                                 <phase>process-test-resources</phase>
-                                <goals><goal>run</goal></goals>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
                                 <configuration>
                                     <target>
                                         <!-- Configure IIOP server and client. -->
-                                        <ant antfile="${jbossas.ts.integ.dir}/src/test/scripts/iiop-build.xml">
-                                            <property name="node0" value="${node0}"/> <!-- inheritAll="true" doesn't work. -->
-                                            <property name="node1" value="${node1}"/>
-                                            <target name="build-iiop"/>
+                                        <ant
+                                            antfile="${jbossas.ts.integ.dir}/src/test/scripts/iiop-build.xml">
+                                            <property name="node0"
+                                                value="${node0}" /> <!-- inheritAll="true" doesn't work. -->
+                                            <property name="node1"
+                                                value="${node1}" />
+                                            <target name="build-iiop" />
                                         </ant>
                                     </target>
                                 </configuration>
@@ -65,9 +88,7 @@
                         </executions>
                     </plugin>
 
-                    <!--
-                       Surefire test executions
-                    -->
+                    <!-- Surefire test executions -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -76,14 +97,18 @@
                             <!-- Disable default-test execution. -->
                             <execution>
                                 <id>default-test</id>
-                                <goals><goal>test</goal></goals>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
                                 <phase>none</phase>
                             </execution>
                             <!-- Multi node clustering tests. -->
                             <execution>
                                 <id>tests-iiop-multi-node.surefire</id>
                                 <phase>test</phase>
-                                <goals><goal>test</goal></goals>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
                                 <configuration>
                                     <!-- Tests to execute. -->
                                     <includes>
@@ -91,10 +116,15 @@
                                     </includes>
 
                                     <!-- Parameters to test cases. -->
-                                    <systemPropertyVariables combine.children="append">
+                                    <systemPropertyVariables
+                                        combine.children="append">
                                         <arquillian.launch>iiop</arquillian.launch>
                                         <jboss.server.config.file.name>standalone-full.xml</jboss.server.config.file.name>
                                     </systemPropertyVariables>
+                                    <argLine>
+                                        -Djava.endorsed.dirs=${project.build.directory}/endorsed
+                                        -Dcom.sun.CORBA.ORBUseDynamicStub=true
+                                        -Dcom.arjuna.ats.arjuna.common.propertiesFile=jbossts-properties.xml</argLine>
                                 </configuration>
                             </execution>
 
